[package]
name = "access_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
ipwhois = "1.0.2"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "fs",
] }
whoiz = "0.1.2"
ansi_term = "0.12.1"
chrono = "0.4.40"
