[package]
name = "access_parser"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "fs",
] }
ansi_term = "0.12.1"
chrono = "0.4.40"
rev_buf_reader = "0.3.0"
dotenv = "0.15.0"
